--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
@@ -13,36 +13,51 @@
 	</div>
 
 	<div id="filter" *ngIf="hideFilterPanel">
-		<form id="filter-form" [formGroup]="formFilter" style="margin: 10px" (ngSubmit)="filter()">
-
+		<form id="filter-form" [formGroup]="formFilter" style="margin: 15px" fxLayout="column" (ngSubmit)="filter()">
 			<mat-form-field appearance="outline">
 				<mat-label [translate]="'ambulatoria.paciente.ordenes_prescripciones.filter.STATE'"></mat-label>
 				<mat-select name="status" formControlName="statusId">
 					<mat-option *ngFor="let status of medicamentStatus" [value]="status.id">
-						 {{status.description | translate}}
-					 </mat-option>
+						{{status.description | translate}}
+					</mat-option>
 				</mat-select>
+				<button id="clear-status" type="button" mat-button *ngIf="formFilter.controls.statusId.value" matSuffix
+						color="warn"
+						mat-icon-button
+						(click)="clearFilterField(formFilter.controls.statusId); $event.stopPropagation()">
+					<mat-icon>close</mat-icon>
+				</button>
 			</mat-form-field>
-			<div>
-				<mat-form-field appearance="outline">
-					<mat-label [translate]="'ambulatoria.paciente.ordenes_prescripciones.filter.MEDICATION'"></mat-label>
-					<input matInput
-					type="text"
-					id="medicationStatement"
-					name="medicationStatement"
-					formControlName="medicationStatement">
-				</mat-form-field>
-			</div>
-			<div>
-				<mat-form-field appearance="outline">
-					<mat-label [translate]="'ambulatoria.paciente.ordenes_prescripciones.filter.PROBLEM'"></mat-label>
-					<input matInput
-					type="text"
-					id="healthCondition"
-					name="healthCondition"
-					formControlName="healthCondition">
-				</mat-form-field>
-			</div>
+			<mat-form-field appearance="outline">
+				<mat-label [translate]="'ambulatoria.paciente.ordenes_prescripciones.filter.MEDICATION'"></mat-label>
+				<input matInput
+					   type="text"
+					   id="medicationStatement"
+					   name="medicationStatement"
+					   formControlName="medicationStatement">
+				<button id="clear-medication" type="button" mat-button
+						*ngIf="formFilter.controls.medicationStatement.value" matSuffix color="warn"
+						mat-icon-button
+						(click)="clearFilterField(formFilter.controls.medicationStatement); $event.stopPropagation()">
+					<mat-icon>close</mat-icon>
+				</button>
+			</mat-form-field>
+
+			<mat-form-field appearance="outline">
+				<mat-label [translate]="'ambulatoria.paciente.ordenes_prescripciones.filter.PROBLEM'"></mat-label>
+				<input matInput
+					   type="text"
+					   id="healthCondition"
+					   name="healthCondition"
+					   formControlName="healthCondition">
+				<button id="clear-healthCondition" type="button" mat-button
+						*ngIf="formFilter.controls.healthCondition.value" matSuffix color="warn"
+						mat-icon-button
+						(click)="clearFilterField(formFilter.controls.healthCondition); $event.stopPropagation()">
+					<mat-icon>close</mat-icon>
+				</button>
+			</mat-form-field>
+
 
 			<div align="end">
 				<button mat-flat-button color="primary" type="submit">
