--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -32,3 +32,17 @@ mat-form-field {
 .margin-bottom {
 	margin-bottom: 3vh;
 }
+
+.recomendado-antropo {
+	margin-top: -3%;
+}
+
+.recomendado-tension {
+	margin-top: 2%;
+}
+
+.recomendado {
+	color: lightgray;
+	font-size: 13px;
+	font-weight: lighter;
+}
