--- a/front-end/webapp/src/app/modules/presentation/components/document-section/document-section.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/document-section/document-section.component.html
@@ -1,4 +1,6 @@
 <h2 class="mat-h2" [translate]="sectionTitle"></h2>
+<h5 class="recomendado" [translate]="sectionImportance"></h5>
+
 <mat-card>
 	<mat-card-content>
 		<ng-content select="[concept-form]"></ng-content>
