--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/new-episode-adult-gynecological-triage/new-episode-adult-gynecological-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/new-episode-adult-gynecological-triage/new-episode-adult-gynecological-triage.component.html
@@ -6,8 +6,8 @@
 		</div>
 		<div>
 			<h3 [translate]="'guardia.new-episode.ADM_TRIAGE'"></h3>
-			<app-adult-gynecological-triage (onConfirm)="confirmEvent($event)"
-											(onCancel)="cancelEvent()"></app-adult-gynecological-triage>
+			<app-adult-gynecological-triage (confirm)="confirmEvent($event)"
+											(cancel)="cancelEvent()"></app-adult-gynecological-triage>
 		</div>
 	</section>
 </app-content>
