--- a/front-end/webapp/src/app/modules/home/routes/settings/settings.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/settings/settings.component.html
@@ -10,7 +10,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 512, height: 128}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, SPONSOR_LOGO)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, SPONSOR_LOGO)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(SPONSOR_LOGO)"></button>
             </div>
         </div>
@@ -23,7 +23,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE"
                                     [validations]="{acceptFormat: '.ico', width: 16, height: 16}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, FAVICON)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, FAVICON)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(FAVICON)"></button>
             </div>
         </div>
@@ -37,7 +37,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 72, height: 72}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, ICON_72)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, ICON_72)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_72)"></button>
             </div>
 
@@ -46,7 +46,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 96, height: 96}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, ICON_96)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, ICON_96)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_96)"></button>
             </div>
 
@@ -55,7 +55,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 128, height: 128}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, ICON_128)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, ICON_128)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_128)"></button>
             </div>
 
@@ -64,7 +64,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 144, height: 144}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, ICON_144)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, ICON_144)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_144)"></button>
             </div>
 
@@ -73,7 +73,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 152, height: 152}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, ICON_152)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, ICON_152)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_152)"></button>
             </div>
 
@@ -82,7 +82,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 192, height: 192}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, ICON_192)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, ICON_192)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_192)"></button>
             </div>
 
@@ -91,7 +91,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 384, height: 384}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, ICON_384)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, ICON_384)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_384)"></button>
             </div>
 
@@ -100,7 +100,7 @@
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 512, height: 512}"
                                     icon="attach_file"
-                                    (onSelectFiles)="selectFile($event, ICON_512)"></app-img-uploader>
+                                    (selectFiles)="selectFile($event, ICON_512)"></app-img-uploader>
                 <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_512)"></button>
             </div>
 
