--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/adult-gynecological-triage-dialog/adult-gynecological-triage-dialog.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/adult-gynecological-triage-dialog/adult-gynecological-triage-dialog.component.html
@@ -2,7 +2,7 @@
 	<div class="mat-h2" [translate]="'guardia.triage.TITLE'"></div>
 </div>
 <app-adult-gynecological-triage class="mat-typography" mat-dialog-content
-	(onConfirm)="setTriage($event)"
-	(onCancel)="dialogRef.close()"
+	(confirm)="setTriage($event)"
+	(cancel)="dialogRef.close()"
 	[confirmLabel]="'guardia.triage.CONFIRM'"
 	[cancelLabel]="'buttons.CANCEL'"></app-adult-gynecological-triage>
