--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/pediatric-triage-dialog/pediatric-triage-dialog.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/dialogs/pediatric-triage-dialog/pediatric-triage-dialog.component.html
@@ -2,7 +2,7 @@
 	<div class="mat-h2" [translate]="'guardia.triage.TITLE'"></div>
 </div>
 <app-pediatric-triage mat-dialog-content class="mat-typography"
-	(onConfirm)="setTriage($event)"
-	(onCancel)="dialogRef.close()"
+	(confirm)="setTriage($event)"
+	(cancel)="dialogRef.close()"
 	[confirmLabel]="'guardia.triage.CONFIRM'"
 	[cancelLabel]="'buttons.CANCEL'"></app-pediatric-triage>
