--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/new-episode-admin-triage/new-episode-admin-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/new-episode-admin-triage/new-episode-admin-triage.component.html
@@ -6,8 +6,8 @@
 		</div>
 		<div>
 			<h3 [translate]="'guardia.new-episode.ADM_TRIAGE'"></h3>
-			<app-administrative-triage (onConfirm)="confirmEvent($event)"
-									   (onCancel)="cancelEvent()"></app-administrative-triage>
+			<app-administrative-triage (confirm)="confirmEvent($event)"
+									   (cancel)="cancelEvent()"></app-administrative-triage>
 		</div>
 	</section>
 </app-content>
