--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
@@ -51,21 +51,21 @@
 
 				<div fxLayout="column" fxLayoutGap="1px">
 					<span class="grid-title" translate="guardia.episode.administrative.POLICE_INTERVENTION"></span>
-					<div *ngIf="responseEmergencyCare?.policeIntervention as policeIntervention else no">
+					<div *ngIf="responseEmergencyCare?.policeInterventionDetails as policeInterventionDetails else no">
 						<div fxLayout="row" fxLayoutGap="3px" class="content-primary">
 							<span>
-								{{policeIntervention.firstName}}
-								{{policeIntervention.lastName}}</span>
-							<div *ngIf="policeIntervention.plateNumber" fxLayoutGap="3px">
-								<label *ngIf="policeIntervention.firstName || policeIntervention.lastName">•</label>
-								<span>Placa. Nº {{policeIntervention.plateNumber}}</span>
+								{{policeInterventionDetails.firstName}}
+								{{policeInterventionDetails.lastName}}</span>
+							<div *ngIf="policeInterventionDetails.plateNumber" fxLayoutGap="3px">
+								<label *ngIf="policeInterventionDetails.firstName || policeInterventionDetails.lastName">•</label>
+								<span>Placa. Nº {{policeInterventionDetails.plateNumber}}</span>
 							</div>
 						</div>
 						<div fxLayout="row" fxLayoutGap="3px" class="content-secondary">
-							<span *ngIf="policeIntervention.callDate">{{ policeIntervention.callDate | viewDateDto:
+							<span *ngIf="policeInterventionDetails.callDate">{{ policeInterventionDetails.callDate | viewDateDto:
 								'date' | date: 'dd/MM/yyyy' }}</span>
-							<span *ngIf="policeIntervention.callDate && policeIntervention.callTime"> - </span>
-							<span *ngIf="policeIntervention.callTime">{{ policeIntervention.callTime | viewDateDto:
+							<span *ngIf="policeInterventionDetails.callDate && policeInterventionDetails.callTime"> - </span>
+							<span *ngIf="policeInterventionDetails.callTime">{{ policeInterventionDetails.callTime | viewDateDto:
 								'time' | date: 'HH:mm' }} hs</span>
 						</div>
 					</div>
